tests/ui/const-generics/mgca/type-const-inherent-assoc-const-without-body.stderr
error: associated constant in `impl` without body
  --> $DIR/type-const-inherent-assoc-const-without-body.rs:8:5
   |
LL |     const SIZE: usize;
   |     ^^^^^^^^^^^^^^^^^-
   |                      |
   |                      help: provide a definition for the constant: `= <expr>;`

error[E0425]: cannot find type `S` in this scope
  --> $DIR/type-const-inherent-assoc-const-without-body.rs:6:6
   |
LL | impl S {
   |      ^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
